--- a/TheWorld/wwwroot/css/styletime.css
+++ b/TheWorld/wwwroot/css/styletime.css
@@ -64,11 +64,27 @@ table {
 .note{
     color: orange;
     position: fixed;
-    bottom: 3em;
-    margin: 0 3em;
+    bottom: 1em;
+    left: 1em;
     background-color: rgba(0,0,0,0.8);
     padding: 1em;
     font-size: 0.75em;
+    max-width: 200px;
+}
+
+.top__icon{
+    height: 2em;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 1em;
+    background-color: rgba(0,0,0,0.1);
+    box-shadow: 12px 12px 20px rgba(0,0,0,0.2);
+    border-radius: 100px;
+    margin: 1em;
+}
+.top__icon:hover{
+    background-color: rgba(255,255,255,0.4);
 }
 
 
@@ -336,7 +352,7 @@ main{
     margin: 0 0 1em 0;
 }
 .tabnav__item{
-    padding: 1em 1em 1em 1em;  
+    padding: 2em 2em 2em 2em;  
     border-bottom: 1px solid rgba(0,0,0,0.2);
     color: rgba(0,0,0,0.7);
 }
@@ -375,12 +391,22 @@ color: rgba(250, 200, 0, 1);
     display: flex;
     flex-wrap: wrap;
     padding: 2em 0 2em 0;
+    align-items: center;
+    justify-content: center;
+}
+.dpimg{
+    height: auto;
+    margin: 1em auto;
+    box-shadow: 12px 12px 20px rgba(0,0,0,0.1);
+    border-radius: 5px;
+    max-width: 400px;
 }
 .pbox{
-    width: 80%;
-    height: 20em;
-    margin: 1em auto;
-    background-color: grey;
+    margin: 1em;
+}
+
+#dpimg3{
+    max-height: 300px;
 }
 
 
@@ -400,9 +426,18 @@ color: rgba(250, 200, 0, 1);
     height: 15em;
     background-color: rgba(0,0,0,0.7);
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.icon__container{
+    display: flex;
+    flex-wrap: nowrap;
+}
+.footer__icon{
+    padding: 1em;
+    height: 3em;
 }
 .copyright{
     color: white;
@@ -473,9 +508,6 @@ color: rgba(250, 200, 0, 1);
     .nav__items{
         padding: 1.15em;
         margin:1.3333em;
-    }
-        .pbox{
-        width: 45%;
     }
 }
 
@@ -578,8 +610,5 @@ color: rgba(250, 200, 0, 1);
             font-size: 1.1em;
             width: 100%;
         }
-    .pbox{
-        width: 30%;
-    }
     
 }
